--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bảng Tính Tỉ Lệ Dinh Dưỡng</title>
+    <title>Bảng Tính Tỉ Lệ Pha Lóc</title>
     <style>
         /* --- CẤU HÌNH GIAO DIỆN (CSS) --- */
         :root {
@@ -286,4 +286,5 @@
 
     </script>
 </body>
+
 </html>
