--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <script>
         const CONFIG_SAMPLE = 40;
         var config_sample_value = [
-            { name: "Nách)", ratio: 1.14},
+            { name: "Nách", ratio: 1.14},
             { name: "Vai", ratio: 3.4 },
             { name: "Nạc dăm", ratio: 1.8 },
             { name: "Sườn già", ratio: 0.7 },
@@ -288,3 +288,4 @@
 </body>
 
 </html>
+
